--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -6,6 +6,7 @@
     flex-direction: column;
     align-items: center;
     padding-top: 40px;
+    height: 100vh;
 }
 
 
@@ -17,7 +18,7 @@
     align-items: center;
 }
 
-.header__title {
+.header_main__title {
     text-align: center;
     text-transform: uppercase;
     font-size: 150px;
@@ -26,12 +27,21 @@
     line-height: 125%;
 }
 
+.header__title {
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 64px;
+    font-weight: 700;
+    color: #DB3138;
+    line-height: 80px;
+    max-width: 70%;
+}
+
 .header__description {
     width: 50%;
-    margin:40px 0;
+    margin: 40px 0;
     font-size: 40px;
     font-weight: 500;
     line-height: 48px;
     text-align: center;
 }
-
