--- a/src/components/Price/Price.module.css
+++ b/src/components/Price/Price.module.css
@@ -1,5 +1,5 @@
 .price {
-    margin: 0 auto;
+    margin: 0 10%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -12,22 +12,24 @@
 }
 
 .price__table {
+    width: 100%;
     margin-top: 20px;
     border-top: 1px solid #898989;
-    border-bottom:1px solid #898989;
+    border-bottom: 1px solid #898989;
     border-collapse: collapse;
 }
 
-.table__head, .table__cell {
+.table__head,
+.table__cell {
     text-transform: uppercase;
     text-align: center;
     font-size: 24px;
     font-weight: 200;
-    border-bottom:1px solid #898989;
+    border-bottom: 1px solid #898989;
     border-top: 1px solid #898989;
 }
 
-.table__head{
+.table__head {
     padding: 30px 0;
 
 }
