--- a/src/components/Slider/SliderLIst/SliderList.module.css
+++ b/src/components/Slider/SliderLIst/SliderList.module.css
@@ -1,12 +1,15 @@
 .slider__display {
     width: 100%;
     display: flex;
+    align-items: center;
+    /* justify-content: center; */
     transition: .5s;
     gap: 30px;
 }
 
-.slider__next, .slider__prev {
-    cursor:pointer;
+.slider__next,
+.slider__prev {
+    cursor: pointer;
     position: absolute;
     display: flex;
     align-items: center;
@@ -30,7 +33,8 @@
     left: -5%;
 }
 
-.next__button, .prev__button {
+.next__button,
+.prev__button {
     display: block;
     width: 10px;
     height: 10px;
